--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ pyTelegramBotAPI==3.6.6
 celery[redis]==4.3.0
 mysqlclient==1.4.4
 textract==1.6.3
+djangorestframework==3.11.0
+django-cors-headers==3.2.0
+django-filter==2.2.0
+coreapi==2.3.3
+markdown==3.1.1
