--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ grab==0.6.41
 pyTelegramBotAPI==3.6.6
 celery[redis]==4.3.0
 mysqlclient==1.4.4
+six==1.12.0
 textract==1.6.3
 djangorestframework==3.11.0
 django-cors-headers==3.2.0
